# c-_speach_recognize

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  vosk_api.def  команды.txt
build — копия/: CMakeCache.txt
build — копия/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build — копия/pro_autogen/: deps
